--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,12 @@ a {
   cursor: pointer;
   text-decoration: underline;
 }
+
+.ModalOverlay {
+  position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.7);
+}
